--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
 			<version>8.18.0</version>
 		</dependency>
 		<dependency>
+			<groupId>io.github.openfeign.form</groupId>
+			<artifactId>feign-form</artifactId>
+			<version>2.0.5</version>
+		</dependency>
+		<dependency>
 			<groupId>com.netflix.feign</groupId>
 			<artifactId>feign-httpclient</artifactId>
 			<version>8.18.0</version>
